toggle price switch done

--- a/stylesheets/base/_base.scss
+++ b/stylesheets/base/_base.scss
@@ -72,6 +72,11 @@ a{
     display: flex;
     justify-content: space-between;
   }
+  .bannerLink{
+    width: 170px;
+    display: flex;
+    justify-content: space-between;
+  }
 
   .openMenu, .closeMenu{
     cursor: pointer;
