--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -49,6 +49,16 @@ a {
           justify-content: space-between;
 }
 
+.bannerLink {
+  width: 170px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
 .openMenu, .closeMenu {
   cursor: pointer;
 }
@@ -1537,19 +1547,8 @@ footer .rights p {
         align-self: end;
   }
   .featuredMain .featureHome {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-grid-column-align: center;
+        justify-self: center;
   }
   .footerBanner {
     -webkit-box-orient: vertical;
@@ -1578,6 +1577,79 @@ footer .rights p {
       -ms-flex-direction: column;
           flex-direction: column;
   padding: 5rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 2rem;
+}
+
+.pricing .priceHead {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 1rem;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.pricing .priceHead .switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.pricing .priceHead .switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.pricing .priceHead .slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.pricing .priceHead .slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.pricing .priceHead input:checked + .slider {
+  background-color: #2196F3;
+}
+
+.pricing .priceHead input:focus + .slider {
+  -webkit-box-shadow: 0 0 1px #2196F3;
+          box-shadow: 0 0 1px #2196F3;
+}
+
+.pricing .priceHead input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+.pricing .priceHead .slider.round {
+  border-radius: 34px;
+}
+
+.pricing .priceHead .slider.round:before {
+  border-radius: 50%;
 }
 
 .pricing .pricingCards {
