--- a/stylesheets/pages/_features.scss
+++ b/stylesheets/pages/_features.scss
@@ -199,11 +199,12 @@
             align-self: end;
         }
         .featureHome{
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
+            // display: flex;
+            // flex-direction: column;
+            // align-items: center;
+            // justify-content: center;
             // gap: 1rem;
+            justify-self: center;
         }
     }
 
