--- a/stylesheets/pages/_pricing.scss
+++ b/stylesheets/pages/_pricing.scss
@@ -30,8 +30,7 @@
             left: 0;
             right: 0;
             bottom: 0;
-            background-color: #ccc;
-            -webkit-transition: .4s;
+            background-color: $lightGrey;
             transition: .4s;
           }
           
@@ -42,20 +41,19 @@
             width: 26px;
             left: 4px;
             bottom: 4px;
-            background-color: white;
-            -webkit-transition: .4s;
+            background-color: $pureBlack;
             transition: .4s;
           }
           input:checked + .slider {
-            background-color: #2196F3;
+            background-color: $pureBlack;
           }
           input:focus + .slider {
-            box-shadow: 0 0 1px #2196F3;
+            box-shadow: 0 0 1px $pureBlack;
           }
           input:checked + .slider:before {
-            -webkit-transform: translateX(26px);
-            -ms-transform: translateX(26px);
             transform: translateX(26px);
+            background-color: $pureWhite;
+
           }
           .slider.round {
             border-radius: 34px;
