link color fixed

--- a/stylesheets/layout/_footer.scss
+++ b/stylesheets/layout/_footer.scss
@@ -52,7 +52,7 @@ footer{
                 opacity: 0.3;
             }
 
-            a:visited {
+            a:visited, a:link {
                 color: $pureWhite;
             }
         }
