--- a/stylesheets/layout/_header.scss
+++ b/stylesheets/layout/_header.scss
@@ -57,7 +57,8 @@ header{
                 opacity: 0.3;
             }
 
-            a:visited {
+
+            a:visited, a:link {
                 color: $pureBlack;
             }
         }
